# promo-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  docker-compose.yml  justfile
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_change_embedding_dim_1536_to_1024.py  0f6919d91c76_add_approved_at_to_contents.py  1adcba406cef_add_categories_tags_update_content.py  20260418_0001_initial_schema.py  28a9a56a4a6d_add_hot_score_to_contents.py  2f3b7269c43a_add_view_count_download_count_to_.py  383e805dd6b2_add_thumbnail_key_to_contents.py  56c2acf66c24_add_search_document_embedding_text_to_.py  7d9e61b5d4b3_make_content_title_nullable.py  7ea4adb99f96_add_media_width_height_to_contents.py  ad9479a1db72_add_description_to_categories.py  c7959e0a81ca_merge_heads.py  d1203460338a_add_ai_status_fields_and_title_default.py  d26a21881b0e_add_feishu_group_chats_table.py  fb0ec359f088_add_sort_order_to_tags.py
backend/app/: main.py
backend/app/bot/: handlers.py  router.py  ws_client.py
backend/app/core/: config.py  deps.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/domains/: __init__.py  auth.py  content.py  (+1 more)
backend/tests/: conftest.py  test_ai_infrastructure.py  test_audit.py  test_bot_handlers.py  test_content.py  test_logging.py  test_search.py  test_search_api.py  test_search_core.py  test_search_errors.py  test_search_query_parser.py  test_search_ranker.py  test_search_retriever.py  test_system.py
(+159 files in other folders)
